changement liste->matrice + ajout dataset1